<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="match_parent"
        tools:context=".MainActivity"


>
    <ImageView
            android:layout_width="146dp"
            android:layout_height="75dp"
            android:src="@drawable/kccafc_logo1"
            android:id="@+id/imageView"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="@string/todo"/>
    <TextView
            android:text="@string/member_registration_app"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_width="299dp"
            android:layout_height="52dp"
            android:id="@+id/textView" android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"/>

    <Button
            android:text="@string/add_new_member"
            android:layout_width="300dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            style="?android:attr/buttonBarStyle"
            android:layout_height="60dp" android:id="@+id/buNewMember" android:layout_weight="1"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.49" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>

</android.support.constraint.ConstraintLayout>